objects/HL_Community_Activities__c.object
<CustomObject>
    <description>What it Does? Stores activity from Higher Logic Community so we can see who is posting/replying on the forum
Downstream Impact? Related to Contacts
Which department is owner? Customer Care</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HL Community Activities</relationshipLabel>
        <relationshipName>HL_Community_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>HL Community Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HL - {000000}</displayFormat>
        <label>HL Community Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL Community Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>